--- a/laba1-war/web/resources/css/style.css
+++ b/laba1-war/web/resources/css/style.css
@@ -11,7 +11,7 @@ margin-right: -50%;
 transform: translate(-50%, -50%);   
 background: rgba(255,245,215,0.8);
 width: 50%;
-height: 30%;
+height: 40%;
 }
 .div2{
 position: absolute;
@@ -23,4 +23,14 @@ transform: translate(-50%, -50%);
 background: rgba(255,245,215,0.8);
 width: 50%;
 height: 40%;
+}
+.div3{
+position: absolute;
+text-align: center;
+top: 40%;
+left: 50%;
+margin-right: -50%;
+transform: translate(-50%, -50%);   
+background: rgba(255,245,215,0.8);
+
 }
